# ChineseChess

./: .gitignore  CMakeLists.txt  build.bat  package.bat  resources.qrc
.claude/: settings.local.json
qml/: AppSettings.qml  ChessBoard.qml  ChessPiece.qml  GamePage.qml  Main.qml  MenuButton.qml  MenuPage.qml  SettingsPage.qml  SoundManager.qml  TranslationManager.qml
resources/sounds/: 吃.m4a  将军.m4a  绝杀.m4a
src/: ChessBoardModel.cpp  ChessBoardModel.h  Position.cpp  Position.h  main.cpp
src/ai/: ChessAI.cpp  ChessAI.h  EndgameTablebase.cpp  EndgameTablebase.h  Evaluator.cpp  Evaluator.h  MoveOrderer.cpp  MoveOrderer.h  OpeningBook.cpp  OpeningBook.h  SearchEngine.cpp  SearchEngine.h  TranspositionTable.cpp  TranspositionTable.h
src/core/: Board.cpp  Board.h  ChessPiece.cpp  ChessPiece.h  ChessRules.cpp  ChessRules.h  GameController.cpp  GameController.h
src/db/: DatabaseManager.cpp  DatabaseManager.h
src/model/: ChessBoardModel.cpp  ChessBoardModel.h
